blockquote fixup for dark mode

--- a/folio/static/wiki-dark.css
+++ b/folio/static/wiki-dark.css
@@ -62,3 +62,7 @@ a:hover {
     padding: 8px;
     background-color: rgb(61 57 57);
 }
+
+blockquote {
+    background-color: rgb(0 0 0 / 0.3);
+}
